@@ -1,3 +1,7 @@
+20020604
+ - (stevesk) [channels.c] bug #164 patch from YOSHIFUJI Hideaki (changed
+   setsockopt from debug to error for now).
+
 20020527
  - (tim) [configure.ac.orig monitor_fdpass.c] Enahnce msghdr tests to address
    build problem on Irix reported by Dave Love <d.love@dl.ac.uk>. Back out
@@ -677,4 +681,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2142 2002/05/28 00:37:32 tim Exp $
+$Id: ChangeLog,v 1.2143 2002/06/04 20:52:19 stevesk Exp $
